--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="container">
     <!-- Profil Mahasiswa Section -->
     <section class="profil">
-        <img src="c:\Users\ASUS\Downloads\ridrjrr.jpg" alt="Foto Profil"> <!-- Ganti URL foto dengan foto profil yang sesuai -->
+        <img src="d:\TUBES JARKOM\ridrjrr.jpg" alt="Foto Profil"> <!-- Ganti URL foto dengan foto profil yang sesuai -->
         <div class="info">
             <h2>Profil Mahasiswa</h2>
             <p><label>Nama:</label> FARID ASYRAAF RUSMAWAN</p>
