--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <section class="links">
         <h3>Referensi</h3>
         <a href="https://www.contoh-artikel.com" target="_blank">Baca Artikel Mengenai Switch</a><br>
-        <a href="FARID ASYRAAF RUSMAWAN_607012400013.pdf" target="_blank">Download PDF Tutorial </a>
+        <a href="FARID ASYRAAF RUSMAWAN_607012400013_Tubes.pdf" target="_blank">Download PDF Tutorial </a>
     </section>
 </div>
 
